# west-consumer

./: .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: pre-commit.yaml
scripts/: build-api.sh  deploy-api.sh
src/: ceda.py  consumer.py  globus.py  kafka.py  main.py  producer.py  settings.py  utils.py
src/settings/: ceda.py  consumer.py  globus.py  kafka.py  producer.py
